# kubernetes-high-level-load-balancer

./: .gitignore  README.md
deployment-dev/: .gitignore  automate-deploy.ps1  automate-deploy.sh  delete.ps1  pers.yaml
deployment-dev/agent/: agent-dep.yaml  cadvisor.yaml
deployment-dev/agent/image/: Dockerfile
deployment-dev/api/: api-dep.yaml
deployment-dev/api/image/: Dockerfile
deployment-dev/caching-db/: redis-dep.yaml
deployment-dev/reverse-proxy/: rp-dep.yaml
deployment-dev/reverse-proxy/image/: Dockerfile  init.sh  lb.crt  lb.key  nginx.conf
deployment-dev/service-discovery/: customsd.yaml  sd-dep.yaml
deployment-dev/service-discovery/image/: Dockerfile
k8s-interaction/: .gitignore  build.sbt
k8s-interaction/src/main/scala/: main.scala  mainApi.scala
k8s-interaction/src/main/scala/api/: helpers.scala  routes.scala
k8s-interaction/src/main/scala/discovery/: Discoverer.scala  db.scala  globals.scala
metric-calculator/: .gitignore  Cargo.toml
metric-calculator/src/: db.rs  load_balancer.rs  main.rs  nginx_manipulator.rs
metric-calculator/src/tcp/: server.rs
