[package]
name = "metric-calculator"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
ureq = { version = "*", features = ["json", "charset"] }
chrono = "*"
redis = "*"
serde = "1.0.136"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/tcp/server.rs"
